--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,16 @@
     font-family: 'Inter', sans-serif;
 }
 
+/* index.css */
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
+
 body {
     background-image: radial-gradient(circle, #150127c3, #0d011c, #0c011e, #0f0327, #0c021e);
-    min-height: 100vh;
 }
 
