--- a/src/components/innerComponents/TrendingCreations/Slider.css
+++ b/src/components/innerComponents/TrendingCreations/Slider.css
@@ -4,19 +4,16 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: #333;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 5px;
   z-index: 1;
+  /* color: ; */
 }
 
 .custom-prev-arrow {
-  left: 10px;
+  left: -10px;
 }
 
 .custom-next-arrow {
-  right: 10px;
+  right: -10px;
 }
 
 /* Customize the dots container */
